--- a/landing-page/public/index.html
+++ b/landing-page/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/fonts/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,6 +10,54 @@
       content="Web site created using create-react-app"
     />
     <title>few. Space System</title>
+    <link
+      rel="preload"
+      href="%PUBLIC_URL%/fonts/font-1.woff"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="%PUBLIC_URL%/fonts/font-1.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="%PUBLIC_URL%/fonts/font-2.woff"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="%PUBLIC_URL%/fonts/font-2.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="%PUBLIC_URL%/fonts/font.woff"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="%PUBLIC_URL%/fonts/font.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <!-- <link
+      rel="preload"
+      href="/static/css/main.bff2350c.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    /> -->
   </head>
   <body>
     <div id="root"></div>
