--- a/landing-page/public/index.html
+++ b/landing-page/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/fonts/favicon.ico" />
+    <link defer rel="icon" href="%PUBLIC_URL%/fonts/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,6 +11,7 @@
     />
     <title>few. Space System</title>
     <link
+      defer
       rel="preload"
       href="%PUBLIC_URL%/fonts/font-1.woff"
       as="font"
@@ -18,6 +19,7 @@
       crossorigin
     />
     <link
+      defer
       rel="preload"
       href="%PUBLIC_URL%/fonts/font-1.woff2"
       as="font"
@@ -25,6 +27,7 @@
       crossorigin
     />
     <link
+      defer
       rel="preload"
       href="%PUBLIC_URL%/fonts/font-2.woff"
       as="font"
@@ -32,6 +35,7 @@
       crossorigin
     />
     <link
+      defer
       rel="preload"
       href="%PUBLIC_URL%/fonts/font-2.woff2"
       as="font"
@@ -39,6 +43,7 @@
       crossorigin
     />
     <link
+      defer
       rel="preload"
       href="%PUBLIC_URL%/fonts/font.woff"
       as="font"
@@ -46,6 +51,7 @@
       crossorigin
     />
     <link
+      defer
       rel="preload"
       href="%PUBLIC_URL%/fonts/font.woff2"
       as="font"
