Fix accessibility and further optimisation.

--- a/landing-page/public/index.html
+++ b/landing-page/public/index.html
@@ -58,12 +58,13 @@
       type="font/woff2"
       crossorigin
     />
-    <!-- <link
+    <!-- 
+    <link
       rel="preload"
-      href="/static/css/main.bff2350c.css"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
-    /> -->
+    />
+     -->
   </head>
   <body>
     <div id="root"></div>
