--- a/new-space-systems/public/index.html
+++ b/new-space-systems/public/index.html
@@ -25,6 +25,7 @@
 
 <body>
   <div id="root"></div>
+  <script type="text/javascript" src="//www.klaviyo.com/media/js/public/klaviyo_subscribe.js"></script>
 </body>
 
 </html>
