--- a/landing-page/public/index.html
+++ b/landing-page/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <link defer rel="icon" href="%PUBLIC_URL%/fonts/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#fbfbfb" />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
