--- a/new-space-systems/public/index.html
+++ b/new-space-systems/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link defer rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#FBFBFB" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>few. Space System</title>
   <link defer rel="preload" href="%PUBLIC_URL%/fonts/font-1.woff" as="font" type="font/woff2" crossorigin />
